--- a/templates/style.css.html
+++ b/templates/style.css.html
@@ -126,8 +126,8 @@
 
   @media (prefers-color-scheme: dark) {
     body {
-      background-color: #333;
-      color: #ddd;
+      background-color: #fff;
+      color: #444;
     }
 
     h1,
@@ -138,32 +138,32 @@
     h6,
     strong,
     b {
-      color: #eee;
+      color: #222;
     }
 
     a {
-      color: #8cc2dd;
+      color: #3273dc;
     }
 
     code {
-      background-color: #777;
+      background-color: #f2f2f2;
     }
 
     pre code {
-      color: #ddd;
+      color: #222;
     }
 
     blockquote {
-      color: #ccc;
+      color: #222;
     }
 
     textarea,
     input {
-      background-color: #252525;
-      color: #ddd;
+      background-color: #fff;
+      color: #444;
     }
 
     .helptext {
-      color: #aaa;
+      color: #777;
     }
   }
