--- a/templates/base.html
+++ b/templates/base.html
@@ -10,9 +10,11 @@
   <title>{%- block title %}{{ config.title }}{%- endblock %}</title>
   {% include "seo_tags.html" ignore missing %}
   <meta name="referrer" content="no-referrer-when-downgrade">
-  {%- if config.generate_feed %}
+  {%- if config.generate_feeds %}
   {% block rss -%}
-  <link rel="alternate" type={% if config.feed_filename == "atom.xml" %}"application/atom+xml"{% else %}"application/rss+xml"{% endif %} title="{{ config.title }}" href="{{ get_url(path=config.feed_filename) | safe }}">
+  {%- for feed in config.feed_filenames %}
+  <link rel="alternate" type={% if feed == "atom.xml" %}"application/atom+xml"{% else %}"application/rss+xml"{% endif %} title="{{ config.title }}" href="{{ get_url(path=feed) | safe }}">
+  {%- endfor %}
   {%- endblock -%}
   {%- endif %}
   <style>
